--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,7 @@
 {
-  "hosting": {
-    "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+	"hosting": {
+		"public": "build",
+		"site": "generic-sensor-display",
+		"ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+	}
 }
